--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,18 @@ android {
     buildFeatures {
         viewBinding true
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 ext {
     // Testing Dependencies Version
-    androidJunit = '1.1.2'
     junit = '4.13.2'
-    androidJunit = '1.1.2'
     core_testing = '2.1.0'
+    mockito_kotlin = '3.0.0'
+    mockk = '1.12.0'
+    androidJunit = '1.1.2'
 }
 
 dependencies {
@@ -53,11 +57,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.test.ext:junit:$androidJunit"
     testImplementation "junit:junit:$junit"
     testImplementation "androidx.arch.core:core-testing:$core_testing"
+//    testImplementation "org.mockito.kotlin:mockito-kotlin:$mockito_kotlin"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+    testImplementation "io.mockk:mockk:$mockk"
+    androidTestImplementation "androidx.test.ext:junit:$androidJunit"
     androidTestImplementation "androidx.test.ext:junit:$androidJunit"
 }
