--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,26 +40,28 @@ android {
 }
 
 ext {
+    androidx_coreKtx = '1.6.0'
+    androidx_appcompat = '1.3.1'
+    android_material = '1.4.0'
+    androidx_constraintLayout = '2.1.1'
     // Testing Dependencies Version
     junit = '4.13.2'
     core_testing = '2.1.0'
+    coroutines_test = '1.5.2'
     mockk = '1.12.0'
-    androidJunit = '1.1.2'
+    androidJunit = '1.1.3'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation "androidx.core:core-ktx:$androidx_coreKtx"
+    implementation "androidx.appcompat:appcompat:$androidx_appcompat"
+    implementation "com.google.android.material:material:$android_material"
+    implementation "androidx.constraintlayout:constraintlayout:$androidx_constraintLayout"
 
     testImplementation "junit:junit:$junit"
     testImplementation "androidx.arch.core:core-testing:$core_testing"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_test"
     testImplementation "io.mockk:mockk:$mockk"
-    androidTestImplementation "androidx.test.ext:junit:$androidJunit"
     androidTestImplementation "androidx.test.ext:junit:$androidJunit"
 }
