--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ ext {
     androidx_appcompat = '1.3.1'
     android_material = '1.4.0'
     androidx_constraintLayout = '2.1.1'
+    androidx_activityktx = '1.3.1'
     // Testing Dependencies Version
     junit = '4.13.2'
     core_testing = '2.1.0'
@@ -58,6 +59,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$androidx_appcompat"
     implementation "com.google.android.material:material:$android_material"
     implementation "androidx.constraintlayout:constraintlayout:$androidx_constraintLayout"
+    implementation "androidx.activity:activity-ktx:$androidx_activityktx"
 
     testImplementation "junit:junit:$junit"
     testImplementation "androidx.arch.core:core-testing:$core_testing"
