--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,30 +34,36 @@ android {
     buildFeatures {
         viewBinding true
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 ext {
+    androidx_coreKtx = '1.6.0'
+    androidx_appcompat = '1.3.1'
+    android_material = '1.4.0'
+    androidx_constraintLayout = '2.1.1'
+    androidx_activityktx = '1.3.1'
     // Testing Dependencies Version
-    androidJunit = '1.1.2'
     junit = '4.13.2'
-    androidJunit = '1.1.2'
     core_testing = '2.1.0'
+    coroutines_test = '1.5.2'
+    mockk = '1.12.0'
+    androidJunit = '1.1.3'
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation "androidx.core:core-ktx:$androidx_coreKtx"
+    implementation "androidx.appcompat:appcompat:$androidx_appcompat"
+    implementation "com.google.android.material:material:$android_material"
+    implementation "androidx.constraintlayout:constraintlayout:$androidx_constraintLayout"
+    implementation "androidx.activity:activity-ktx:$androidx_activityktx"
 
-    androidTestImplementation "androidx.test.ext:junit:$androidJunit"
     testImplementation "junit:junit:$junit"
     testImplementation "androidx.arch.core:core-testing:$core_testing"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_test"
+    testImplementation "io.mockk:mockk:$mockk"
     androidTestImplementation "androidx.test.ext:junit:$androidJunit"
 }
